--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
         android:text="TextView" />
 
     <RadioGroup
+        android:id="@+id/radioGroupSexo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
